"Removiendo Product desde JSON vía MVC"

--- a/MCV/.classpath
+++ b/MCV/.classpath
@@ -5,6 +5,11 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry excluding="Files.jar/" kind="src" path="src"/>
+	<classpathentry kind="lib" path="libreria/json-simple-1.1.1.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
